# dsmc_suite

./: CMakeLists.txt  README.md
docs/: simulation_report.md
include/: collision.h  constants.h  fileio.h  grid.h  integrator.h  particle.h  polyfit.h  raytracer.h  thermal.h  types.h  velocity.h
scripts/: vesta_raytrace_gif.py  vesta_real_gif.py
src/: main.c
src/common/: collision.c  fileio.c  grid.c  integrator.c  polyfit.c  velocity.c
src/dsmc/: advanced.c  ballistic.c
src/raytracer/: shadow_maker.c
src/thermal/: thermal_model.c
tests/: test_verlet.c
